<resources>
    <string name="app_name" translatable="false">feel it</string>
    <string name="meditation">"Meditation "</string>
    <string name="choose_sound">Choose sound</string>
    <string name="silence">Silence</string>
    <string name="ocean">Ocean</string>
    <string name="time">Time</string>
    <string name="pause">pause</string>
    <string name="back">back</string>
    <string name="forest">Forest</string>
    <string name="storm">Storm</string>
    <string name="settings">settings</string>
    <string name="thank_the_developer">Thank the developer</string>
    <string name="dollar_2" translatable="false">$2</string>
    <string name="dollar_5" translatable="false">$5</string>
    <string name="dollar_10" translatable="false">$10</string>
    <string name="dollar_20" translatable="false">$20</string>
    <string name="music">Music</string>
    <string name="min">1 minute</string>
    <string name="mins">%1$d minutes</string>
    <string name="start">Begin</string>
    <string name="choose_time">Pick a duration</string>
    <string name="tap_to_pause">Tap on the timer to pause</string>
    <string name="tap_to_continue">Tap on the timer to continue</string>
    <string name="thanks">Thank you!</string>
    <string name="timer">timer</string>
</resources>